--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
     "@types/react-big-calendar": "^1.8.9",
+    "bcrypt": "^5.1.1",
     "moment": "^2.30.1",
-    "next": "14.2.5",
-    "next-cloudinary": "^6.13.0",
+    "next": "^15.3.1",
+    "next-cloudinary": "^6.16.0",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-big-calendar": "^1.13.2",
@@ -28,6 +29,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
