--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.19.1",
     "@types/react-big-calendar": "^1.8.9",
     "bcrypt": "^5.1.1",
+    "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "next": "^15.3.1",
     "next-cloudinary": "^6.16.0",
