--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/components/scheduler"  ],
   "exclude": [
     "node_modules"
   ]
