--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.19.1",
     "@types/react-big-calendar": "^1.8.9",
+    "@types/react-calendar": "^4.1.0",
     "bcrypt": "^5.1.1",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
@@ -22,7 +23,8 @@
     "prisma": "^5.19.1",
     "react": "^18",
     "react-big-calendar": "^1.13.2",
-    "react-calendar": "^5.0.0",
+    "react-calendar": "^5.1.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-toastify": "^10.0.5",
