--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.19.1",
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-calendar": "^4.1.0",
+    "@types/react-resizable": "^3.0.8",
     "bcrypt": "^5.1.1",
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
@@ -27,6 +28,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "react-resizable": "^3.0.5",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "zod": "^3.23.8"
